<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                tools:context=".ChooseSkin">

    <TextView
        android:background="@color/primary_color"
        android:textColor="@color/text_color"
        android:gravity="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:textSize="@dimen/title_text_size"
        android:text="@string/title_activity_choose_skin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <ImageView
        android:scaleType="centerCrop"
        android:src="@drawable/skin"
        android:layout_width="match_parent"
        android:layout_height="430dp"/>

    <LinearLayout
        android:background="@color/background_color"
        android:gravity="bottom"
        android:backgroundTint="@color/abc_primary_text_material_dark"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

     <Button
         android:layout_weight="30"
         android:background="@drawable/button_style"
         android:textColor="@color/text_color"
         android:textAppearance="@style/TextAppearance.AppCompat.Button"
         android:textSize="35dp"
         android:id="@+id/black_button"
         android:text="@string/black_skin"
         android:layout_width="0dp"
         android:layout_height="@dimen/button_height"/>
        <Button
            android:background="@drawable/button_style"
            android:id="@+id/mild_button"
            android:text="@string/mild_skin"
            android:layout_marginLeft="6dp"
            android:layout_weight="30"
            android:textColor="@color/text_color"
            android:textAppearance="@style/TextAppearance.AppCompat.Button"
            android:textSize="35dp"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_height"/>
        <Button
            android:layout_weight="30"
            android:id="@+id/white_button"
            android:background="@drawable/button_style"
            android:textColor="@color/text_color"
            android:layout_marginLeft="6dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Button"
            android:textSize="35dp"
            android:text="@string/white_skin"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_height"/>



        </LinearLayout>

</LinearLayout>
