<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              tools:context="com.example.amado.guesswho.ChooseBody">

    <TextView
        android:background="@color/choose_face"
        android:textColor="@color/text_color"
        android:gravity="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:textSize="@dimen/title_text_size"
        android:text="@string/title_activity_choose_face"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="430dp">

    <ImageView
        android:scaleType="fitXY"
        android:src="@drawable/face1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
    <TextView

        android:textColor="@color/text_color_head"
        android:layout_alignParentTop="true"
        android:id="@+id/skin_choosed"
        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
        android:textSize="@dimen/small_text_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView

        android:textColor="@color/text_color_head"
        android:layout_below="@id/skin_choosed"
        android:id="@+id/body_choosed"
        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
        android:textSize="@dimen/small_text_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    </RelativeLayout>
    <LinearLayout
        android:background="@color/background_color"
        android:gravity="bottom"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:background="@drawable/button_style"
            android:textColor="@color/text_color"
            android:textAppearance="@style/TextAppearance.AppCompat.Button"
            android:textSize="30dp"
            android:id="@+id/sharp_button"
            android:text="@string/Sharp_face"
            android:layout_weight="28"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_height"/>

        <Button
            android:id="@+id/normal_button"
            android:background="@drawable/button_style"
            android:textColor="@color/text_color"
            android:textAppearance="@style/TextAppearance.AppCompat.Button"
            android:textSize="30dp"
            android:text="@string/normal_face"
            android:layout_marginLeft="6dp"
            android:layout_weight="30"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_height"/>

        <Button
            android:id="@+id/bold_button"
            android:background="@drawable/button_style"
            android:textColor="@color/text_color"
            android:layout_marginLeft="6dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Button"
            android:textSize="30dp"
            android:text="@string/Bold_face"
            android:layout_weight="28"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_height"/>


    </LinearLayout>

</LinearLayout>
